syntax = "proto3";

package okra.v1;

/* This interface is intended to mirror the Okra-API models.
 * Okra-API consumes output from Okra using a batch process
 * so gRPC is not necessary.
 */

// okra-api/pick_okra/models:RepositoryMetrics
message RepositoryMetric {
  string repo_id = 1;
  float rating = 2;
}

// okra-api/pick_okra/models:Contributor
message Contributor {
  string contrib_name = 1;
  string repo_id = 2;
}

// okra-api/pick_okra/models:RepositoryInfo
message RepositoryInfo {
  string repo_id = 1;
  string repo_name = 2;
  string repo_namespace = 3;
  string first_commit_date = 4;
}
